# vers-like-specifier

./: Cargo.toml  README.md
.github/workflows/: build.yml
benches/: parsing_bench.rs
src/: comparator.rs  constraint.rs  lib.rs  valid_chars.rs  version.rs  vls.rs
tests/: parsing_invalid.rs  parsing_valid.rs
