[package]
name = "vls"
version = "0.1.0"
edition = "2024"
description = "vls (vers-like specifier) parser"
license = "Apache-2.0"
repository = "https://github.com/csaf-rs/vls"
readme = "README.md"
keywords = ["vls", "vers-like", "purl", "vers", "parser"]
categories = ["parser-implementations"]
rust-version = "1.88.0"

[dependencies]
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2"

[features]
default = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "0.26.1"

[[bench]]
name = "parsing_bench"
harness = false

